fix image spacing on card

--- a/src/wmcads/components/content-card/_content-card.scss
+++ b/src/wmcads/components/content-card/_content-card.scss
@@ -8,6 +8,10 @@
   &:hover,
   &:focus {
     box-shadow: inset 0 0 0 1px get-color(primary);
+
+    img {
+      padding: 1px;
+    }
   }
 }
 
@@ -70,7 +74,6 @@
 
   img {
     height: 180px;
-    padding: 1px;
     object-fit: cover;
 
     @media screen and (max-width: $breakpoint-sm) {
